@@ -20,6 +20,7 @@ import org.opensearch.schema.ontology.EntityType;
 
 import java.io.IOException;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.opensearch.graphql.GraphQLSchemaUtils.fakeScalarValue;
 
@@ -150,7 +151,9 @@ public class SQLTraversalWiringFactory implements WiringFactory {
             InputTypeWhereClause whereClause = mapper.readValue(mapper.writeValueAsString(argument), InputTypeWhereClause.class);
             //verify fields exist within entity type
             List<InputTypeConstraint> nonFoundFields = whereClause.getConstraints().stream()
-                    .filter(c -> !realType.get().containsProperty(c.getOperand())).toList();
+                    .filter(c -> !realType.get().containsProperty(c.getOperand()))
+                    .collect(Collectors.toList());
+
 
             if (!nonFoundFields.isEmpty())
                 throw new IllegalArgumentException("Fields " + nonFoundFields + " are not a part of the queried entity " + realType.get().getName());
