@@ -20,6 +20,7 @@ import java.io.FileInputStream;
 import java.io.InputStream;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.opensearch.schema.ontology.DirectiveType.Argument.*;
 import static org.opensearch.schema.ontology.PrimitiveType.Types.*;
@@ -60,7 +61,9 @@ public class GraphQLSimpleOntologyTranslatorTest {
     @Test
     public void testIndexProviderBuilder() {
         IndexProvider provider = IndexProvider.Builder.generate(ontology);
-        List<String> names = provider.getEntities().stream().map(Entity::getType).map(BaseTypeElement.Type::getName).toList();
+        List<String> names = provider.getEntities().stream().map(Entity::getType).map(BaseTypeElement.Type::getName)
+                .collect(Collectors.toList());
+
         Assertions.assertTrue(names.contains("Author"));
         Assertions.assertTrue(names.contains("Book"));
     }
